# OOP_LAB2

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: eleven.hpp
src/: eleven.cpp
test/: test01.cpp
